--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -142,3 +142,21 @@
         text-align: left; 
     }
 }
+
+@media screen and (max-width: 768px) {
+    .experience-sub-title {
+        height: auto;
+    }
+    article{
+        flex-direction: column;
+        text-align: center;
+        justify-content: center;
+        padding: auto;
+    }
+    .article-container {
+        text-align: center;
+        justify-content: center;
+        padding: auto;
+    }
+}
+
