--- a/style.css
+++ b/style.css
@@ -332,6 +332,8 @@ section {
     font-weight: 600;
     font-size: 1.75rem;
     margin-bottom: 2rem;
+    height: 5em;
+    text-align: center;
 }
 .experience-details-container {
     display: flex;
@@ -350,7 +352,7 @@ section {
 
 article {
     display: flex;
-    width: 10rem;
+    /* width: 10rem; */
     justify-content: left;
     gap: 1.5rem;
     margin-top: 3rem;
@@ -367,7 +369,7 @@ article.icon {
     border-radius: 2rem;
     border: rgb(53, 53, 53) 0.1rem solid;
     border-color: rgb(163, 163, 163);
-    text-align: center;   
+    text-align: center;  
 }
 
 .details-containers p {
@@ -462,3 +464,4 @@ margin: 0 1rem;
 footer p {
     text-align: center;
 }
+
